Makefile.am: Added libbbexample dependency to fix parallel build bug
Signed-off-by: Henry Bruce <henry.bruce@intel.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,3 +10,4 @@ libbbexample_la_LDFLAGS= -version-info 1:0:0
 bin_PROGRAMS = bbexample
 bbexample_SOURCES = bbexample.c
 bbexample_LDADD = .libs/libbbexample.la
+bbexample_DEPENDENCIES = libbbexample.la
