Makefile.am: Add -O2 and move build library to fix build failures
Signed-off-by: Alex J Lennon <ajlennon@dynamicdevices.co.uk>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
-CFLAGS = -Wall -pedantic
+CFLAGS = -Wall -pedantic -O2
 include_HEADERS = bbexample.h
 
 lib_LTLIBRARIES = libbbexample.la
@@ -9,4 +9,4 @@ libbbexample_la_LDFLAGS= -version-info 1:0:0
 
 bin_PROGRAMS = bbexample
 bbexample_SOURCES = bbexample.c
-bbexample_LDADD = .libs/libbbexample.la
+bbexample_LDADD = libbbexample.la
